Fixed spacing and sizing for journal entries on front-page

--- a/themes/inhabitant/sass/_page-templates.scss
+++ b/themes/inhabitant/sass/_page-templates.scss
@@ -75,9 +75,10 @@
   .journal-list {
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: center;
     .journ-art {
-      width: 30%;
+      margin: 20px;
+      width: 25%;
       display: flex;
       flex-direction: column;
       .entry-meta {
@@ -88,15 +89,23 @@
         border: solid 1px #e1e1e1;
         border-top: solid 5px #e1e1e1;
         text-decoration-style: none;
-        color: black;
         text-align: left;
         height: 100%;
         .journal-text {
           padding-left: 15px;
+          padding-top: 10px;
         }
         h2 {
-          padding-left: 15px;
           margin: 0px;
+          display: flex;
+          justify-content: flex-start;
+          align-items: flex-start;
+          a {
+            color: #808080;
+            &:hover {
+              color: #2f1339
+            }
+          }
         }
         .blog-button {
           border: 1px solid black;
@@ -104,7 +113,7 @@
           margin: 20px;
           text-transform: uppercase;
           text-decoration-style: none;
-          color: #808080;
+          color: black;
           text-decoration: none;
         }
         .blog-button:hover {
